#36 use getVirtualFilesByName instead of deprecated getFilesByName, allow to resolve template names in string literals in all directories marked with .jteroot, not only directories named "jte"